--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&family=Indie+Flower&family=Inter:wght@400;500;700&family=Titillium+Web:wght@200;300;400;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/5a0d59bee4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5a0d59bee4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/svg" href="img/hotel-solid.svg">
+    <link rel="shortcut icon" type="image/svg" href="img/hotel-solid.svg" />
     <link rel="stylesheet" href="style.css" />
     <title>Vision Luxury Villas | True Relaxation</title>
   </head>
@@ -21,16 +24,24 @@
     <section id="header">
       <!-- NAVIGATION -->
       <nav class="header__main-nav">
-        <input type="checkbox">
+        <input type="checkbox" />
         <div class="header__main-nav--hamburger"><div></div></div>
         <div class="header__main-nav--menu">
           <div>
             <div>
               <ul>
-                <li><a href="#" class="header__main-nav--menu--link">Home</a></li>
-                <li><a href="#" class="header__main-nav--menu--link">Villas</a></li>
-                <li><a href="#" class="header__main-nav--menu--link">About</a></li>
-                <li><a href="#" class="header__main-nav--menu--link">Contact</a></li>
+                <li>
+                  <a href="#" class="header__main-nav--menu--link">Home</a>
+                </li>
+                <li>
+                  <a href="#" class="header__main-nav--menu--link">Villas</a>
+                </li>
+                <li>
+                  <a href="#" class="header__main-nav--menu--link">About</a>
+                </li>
+                <li>
+                  <a href="#" class="header__main-nav--menu--link">Contact</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -38,18 +49,77 @@
       </nav>
       <!-- Logo and Content Container -->
       <div class="header__logo__content">
-        <a href="#" class="header__logo__content--logo"><span>V</span>L<span>V</span></a>
+        <a href="#" class="header__logo__content--logo"
+          ><span>V</span>L<span>V</span></a
+        >
         <div class="header__logo__content--content">
           <h1 class="header__logo__content--content--title">Relax Your Soul</h1>
-          <p class="header__logo__content--content--paragraph">The team of VLV welcomes you. Start relaxing your soul and enjoy your stay.</p>
-          <a href="#" class="header__logo__content--content--link">Discover More</a>
+          <p class="header__logo__content--content--paragraph">
+            The team of VLV welcomes you. Start relaxing your soul and enjoy
+            your stay.
+          </p>
+          <a href="#" class="header__logo__content--content--link"
+            >Discover More</a
+          >
         </div>
       </div>
     </section>
     <!-- Booking Content Section -->
-    <section id="booking-content">BOOKING CONTENT</section>
+    <section id="booking-content">
+      <h2 class="booking-content__title">Discover Serenity</h2>
+      <p class="booking-content__paragraph">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo veritatis
+        voluptate quis provident dolor animi vel quibusdam suscipit! Sed sit,
+        similique facere et expedita non atque commodi at accusamus! Vitae.
+      </p>
+      <div class="booking-content__icons">
+        <div class="booking-content__icons--weather">
+          <i class="fa-regular fa-sun"></i>
+          <p>24<sup>&#8451</sup></p>
+        </div>
+        <div class="booking-content__icons--time">
+          <i class="fa-regular fa-clock"></i>
+          <p>05:00 PM</p>
+        </div>
+      </div>
+    </section>
     <!-- Booking Date Section -->
-    <section id="booking-date">BOOKING DATE</section>
+    <section id="booking-date">
+      <!-- Schedule -->
+      <div class="booking-date__schedule">
+        <div class="booking-date__schedule--arrival">
+          <h5>Arrival</h5>
+          <div>
+            <p>May</p>
+            <p>09</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+        <div class="booking-date__schedule--departure">
+          <h5>Departure</h5>
+          <div>
+            <p>May</p>
+            <p>23</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+        <div class="booking-date__schedule--guests">
+          <h5>Guests</h5>
+          <div>
+            <p>&#65087</p>
+            <p>01</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+      </div>
+      <!-- Contact -->
+      <div class="booking-date__contact">
+        <a href="#" class="booking-date__contact--link">Make a Reservation</a>
+        <p>Reservation Hotline</p>
+        <p>+1-6785-9812-9823</p>
+        <p>Reservation Assistance Available 24 Hours</p>
+      </div>
+    </section>
     <!-- Villas Section -->
     <section id="villas">VILLAS</section>
     <!-- Motto Section -->
