add booking, villas, motto and events sections

--- a/index.html
+++ b/index.html
@@ -121,15 +121,77 @@
       </div>
     </section>
     <!-- Villas Section -->
-    <section id="villas">VILLAS</section>
+    <section id="villas">
+      <!-- Villa 1 -->
+      <div class="villas__villa-1">
+        <h2 class="villas__villa-1--title">Standard Villa</h2>
+        <p class="villas__villa-1--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-1--link">Starting at $200.00</a>
+      </div>
+      <!-- Villa 2 -->
+      <div class="villas__villa-2">
+        <h2 class="villas__villa-2--title">Superior Villa</h2>
+        <p class="villas__villa-2--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-2--link">Starting at $350.00</a>
+      </div>
+      <!-- Villa 3 -->
+      <div class="villas__villa-3">
+        <h2 class="villas__villa-3--title">Infinity Villa</h2>
+        <p class="villas__villa-3--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-3--link">Starting at $700.00</a>
+      </div>
+      <!-- Villa 4 -->
+      <div class="villas__villa-4">
+        <h2 class="villas__villa-4--title"> Ultra Villa</h2>
+        <p class="villas__villa-4--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-4--link">Starting at $1100.00</a>
+      </div>
+      <!-- Villa 5 -->
+      <div class="villas__villa-5">
+        <h2 class="villas__villa-5--title">Galactic Villa</h2>
+        <p class="villas__villa-5--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-5--link">Starting at $1300.00</a>
+      </div>
+      <!-- Villa 6 -->
+      <div class="villas__villa-6">
+        <h2 class="villas__villa-6--title">Cosmic Villa</h2>
+        <p class="villas__villa-6--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestias blanditiis reprehenderit, dolores sunt accusantium rem animi est magni quia commodi aut deleniti excepturi minima reiciendis.</p>
+        <a href="#" class="villas__villa-6--link">Starting at $1500.00</a>
+      </div>
+    </section>
     <!-- Motto Section -->
-    <section id="motto">MOTTO</section>
+    <section id="motto">
+      <div class="motto__content">
+        <h2 class="motto__content--title">We Define Luxury</h2>
+        <p class="motto__content__paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque vero dolorem quae soluta quasi explicabo, aliquam doloremque inventore repellat alias aspernatur totam repudiandae! Iste atque enim molestiae ratione tempore soluta.</p>
+      </div>
+    </section>
     <!-- Events Content Section -->
-    <section id="events-content">EVENTS CONTENT</section>
+    <section id="events-content">
+      <div class="events-content__event-1">
+        <h2 class="events-content__event-1--title">Beach Party</h2>
+        <p class="events-content__event-1--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora natus, quod error vel nesciunt rerum, pariatur expedita accusantium obcaecati suscipit.</p>
+      </div>
+      <div class="events-content__event-2">
+        <h2 class="events-content__event-2--title">Culture Discovery</h2>
+        <p class="events-content__event-2--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora natus, quod error vel nesciunt rerum, pariatur expedita accusantium obcaecati suscipit.</p>
+      </div>
+
+
+
+    </section>
     <!-- EVENTS TEXT -->
-    <section id="events-text">EVENTS TEXT</section>
+    <section id="events-text">
+      <div class="events-text__content">
+        <h2 class="events-text__content--title">Events</h2>
+      </div>
+    </section>
     <!-- Gallery Text Section -->
-    <section id="gallery-text">GALLERY TEXT</section>
+    <section id="gallery-text">
+      <div class="gallery-text__content">
+        <h2 class="gallery-text__content--title">Gallery</h2>
+      </div>
+    </section>
     <!-- Galler Carousel Section -->
     <section id="gallery-carousel">GALLERY CAROUSEL</section>
     <!-- Features Content Section -->
