--- a/index.html
+++ b/index.html
@@ -193,7 +193,46 @@
       </div>
     </section>
     <!-- Galler Carousel Section -->
-    <section id="gallery-carousel">GALLERY CAROUSEL</section>
+    <section id="gallery-carousel">
+      <!-- button left -->
+      <button class="gallery-carousel__btn gallery-carousel__btn--left hidden">
+        <i class="fas fa-caret-left"></i>
+      </button>
+      <!-- image container -->
+      <div class="gallery-carousel__img-container">
+        <ul class="gallery-carousel__img-container--list">
+          <li class="gallery-carousel__img-container--list__item current--img"><img src="img/Gallery/gallery-1.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-2.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-3.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-4.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-5.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-6.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-7.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-8.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-9.jpg" alt="villa"></li>
+          <li class="gallery-carousel__img-container--list__item"><img src="img/Gallery/gallery-10.jpg" alt="villa"></li>
+        </ul>
+      </div>
+      <button class="gallery-carousel__btn gallery-carousel__btn--right">
+        <i class="fas fa-caret-right"></i>
+      </button>
+
+      <!-- carousel nav -->
+      <div class="gallery-carousel__nav">
+        <button class="gallery-carousel__nav--btn current--img"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+      </div>
+
+
+    </section>
     <!-- Features Content Section -->
     <section id="features-content">FEATURES CONTENT</section>
     <!-- Features Text Section -->
@@ -202,5 +241,6 @@
     <section id="testimonials">TESTIMONIALS</section>
     <!-- Footer Section -->
     <footer id="footer">FOOTER</footer>
+    <script src="app.js"></script>
   </body>
 </html>
