add features and testimonials sections and footer

--- a/index.html
+++ b/index.html
@@ -234,13 +234,112 @@
 
     </section>
     <!-- Features Content Section -->
-    <section id="features-content">FEATURES CONTENT</section>
+    <section id="features-content">
+      <!-- feature 1 -->
+      <div class="features-content__feature-1">
+        <h2 class="features-content__feature-1--title">Coctaile Package</h2>
+        <p class="features-content__feature-1--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni porro quis nihil quod officia expedita consequatur laboriosam perspiciatis accusamus numquam.</p>
+      </div>
+      <!-- feature 2 -->
+      <div class="features-content__feature-2">
+        <h2 class="features-content__feature-2--title">Surfing Package</h2>
+        <p class="features-content__feature-2--paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni porro quis nihil quod officia expedita consequatur laboriosam perspiciatis accusamus numquam.</p>
+      </div>
+    </section>
     <!-- Features Text Section -->
-    <section id="features-text">FEATURES TEXT</section>
+    <section id="features-text">
+      <div class="features-text__content">
+        <h2 class="features-text__content--title">Features</h2>
+      </div>
+
+    </section>
     <!-- Testimonials Section -->
-    <section id="testimonials">TESTIMONIALS</section>
+    <section id="testimonials">
+      <!-- Testimonial-1 -->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>Clark Adams</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+      <!-- Testimonial-2-->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>Tony Smith</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+      <!-- Testimonial-3 -->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>Sue Lee</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+      <!-- Testimonial-4 -->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>Lilly James</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+      <!-- Testimonial-5 -->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>John Doe</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+      <!-- Testimonial-6 -->
+      <div class="testimonials__card">
+        <!-- Front -->
+        <div class="testimonials__card--front">
+          <h2>Maya Willow</h2>
+        </div>
+        <!-- Back -->
+        <div class="testimonials__card--back">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, doloremque.</p>
+        </div>
+      </div>
+    </section>
     <!-- Footer Section -->
-    <footer id="footer">FOOTER</footer>
+    <footer id="footer">
+      <p>All Rights Reserver. &copy; VLV</p>
+      <div class="footer__social">
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
